# scuffcommander

./: .gitignore  Cargo.toml  readme.md
configurator/: package-lock.json  package.json  preact.config.js  tsconfig.json  wmr.config.mjs
configurator/public/: index.html  index.tsx  style.css  style.module.css
configurator/public/components/: app.tsx  selectoptsgen.tsx
configurator/public/components/actiondetails/: condition.tsx  generalaction.tsx  index.tsx  obsaction.tsx  obscondition.tsx  singleaction.tsx  style.module.css  vtsaction.tsx  vtscondition.tsx
configurator/public/components/app/: index.tsx  style.module.css
configurator/public/components/draggablelistitem/: index.tsx  style.module.css
configurator/public/components/editbuttonstyle/: index.tsx  style.module.css
configurator/public/components/header/: headerentry.tsx  index.tsx  style.module.css
configurator/public/routes/actions/: chainaction.tsx  conditionaction.tsx  editor.tsx  generalaction.tsx  generalcmd.tsx  index.tsx  obsaction.tsx  obscondition.tsx  singleaction.tsx  style.module.css  types.ts  vtsaction.tsx  vtscondition.tsx  vtsmovemodel.tsx  vtsrestorepos.tsx
configurator/public/routes/config/: index.tsx  obs.tsx  server.tsx  vts.tsx
configurator/public/routes/home/: index.tsx  style.module.css
configurator/public/routes/pages/: editor.tsx  index.tsx
configurator/public/routes/style/: index.tsx  style.module.css
configurator/public/routes/utilities/: index.tsx  vtsautogen.tsx
configurator/public/types/: actions.d.ts  config.d.ts  general.d.ts  index.d.ts  obs.d.ts  ui.d.ts  vts.d.ts
configurator/src/: manifest.json
configurator/src-tauri/: Cargo.toml  tauri.conf.json
configurator/src-tauri/icons/: icon.icns
configurator/src-tauri/src/: actions.rs  config.rs  lib.rs  main.rs  pages.rs  plugins.rs  style.rs
configurator/src-tauri/src/actions/: chain.rs  condition.rs
configurator/src-tauri/src/plugins/: obs.rs  vts.rs
configurator/src/components/: app.tsx
configurator/src/components/draggablelistitem/: index.tsx  style.css
configurator/src/components/editbuttonstyle/: index.tsx  types.ts
configurator/src/components/header/: index.tsx
configurator/src/routes/actions/: chainaction.tsx  common.tsx  conditionaction.tsx  editor.tsx  generalaction.tsx  index.tsx  obsaction.tsx  obscondition.tsx  singleaction.tsx  style.css  types.ts  types.tsx  vtsaction.tsx  vtscondition.tsx
configurator/src/routes/config/: index.tsx  obs.tsx  style.css  types.ts  vts.tsx
configurator/src/routes/home/: index.tsx
configurator/src/routes/pages/: editor.tsx  index.tsx  style.css  types.tsx
configurator/src/routes/style/: index.tsx  types.tsx
configurator/ui/: actions.html  actions.js  common.js  conf.html  conf.js  index.html  package-lock.json  package.json  pages.html  pages.js  size-plugin.json  style.html
configurator/ui-legacy/: actions.html  actions.js  button-style.js  conf.js  pages.html  style.js
configurator/ui-legacy/actions-modules/: chain-action.js  condition-action.js
configurator/ui-legacy/actions-modules/plugins/: plugins.js
configurator/ui/actions-modules/: chain-action.js  condition-action.js  helpers.js  single-action.js
configurator/ui/actions-modules/plugins/: general.js  obs.js  plugins.js  vts.js
configurator/ui/src/routes/profile/: index.tsx
configurator/ui/src/types/: index.ts
core/: Cargo.toml
core/examples/: actiongen.rs  confgen.rs  uiconfgen.rs
core/src/: action.rs  lib.rs  plugins.rs  ui.rs
core/src/plugins/: general.rs  obs.rs  vts.rs
example_conf/: actions.json  config.json  config_plugin.json  ui.json  vts_token.txt
example_conf/templates/: page.html
server/: Cargo.toml
server/src/: lib.rs  main.rs  page.html  plugins.rs
server/src/plugins/: vts.rs
src/: lib.rs  main.rs  plugins.rs
src/html/: test.html
src/plugins/: obs.rs  vts.rs
