[package]
name = "scuffcommander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
actix-rt = "2"
actix-web = "4"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
obws = "0.10.0-beta.3"
vtubestudio = "0.7"
