[package]
name = "scuffcommander-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
tokio = { version = "1", features = ["full"] }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
obws = "0.10.0-beta.4"
vtubestudio = "0.8"

[profile.dev]
split-debuginfo = "packed"
