[package]
name = "scuffcommander-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
handlebars = { version = "4.3.5" }
scuffcommander-core = { path = "../core" }

[profile.dev]
split-debuginfo = "packed"
