[package]
name = "scuffcommander-configurator"
version = "0.1.0"
description = "ScuffCommander Configuration App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["dialog"] }
tokio = { version = "1.28", features = ["full"] }
base64 = "0.21.0"
infer = { version = "0.13", default-features = false }
directories = "5.0"
scuffcommander-core = { path = "../../core" }
time = { git = "https://github.com/time-rs/time", rev = "v0.3.21" } # Tauri 1.3 unfortunately hardcoded an old version as requirement

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# Again for Tauri 1.3
[patch.crates-io]
time = { git = "https://github.com/time-rs/time", rev = "v0.3.21" }

[profile.dev]
split-debuginfo = "packed"
